@@ -679,7 +679,4 @@ MODULE_SCOPE struct group*   TclpGetGrGid(gid_t gid);
 MODULE_SCOPE struct hostent* TclpGetHostByName(const char *name);
 MODULE_SCOPE struct hostent* TclpGetHostByAddr(const char *addr, int length, int type);
 
-
-MODULE_SCOPE int TclpGetCStackParams(int **stackBound);
-
 #endif /* _TCLUNIXPORT */
